# icu-test

./: CMakeLists.txt  main.cpp
